fix: do not show vertical scrollbar for charts in dashboard (#12478)
* fix: do not show vertical scrollbar for charts in dashboard

* Proper fix for #11419

--- a/superset-frontend/src/dashboard/stylesheets/components/chart.less
+++ b/superset-frontend/src/dashboard/stylesheets/components/chart.less
@@ -114,12 +114,6 @@
   }
 }
 
-.chart-slice {
-  height: calc(100% - 32px);
-  overflow: auto;
-  height: 100%;
-}
-
 .dot {
   @dot-diameter: 4px;
 
